--- a/css/style.css
+++ b/css/style.css
@@ -479,11 +479,11 @@ img {
 }
 
 .feature.alpha .illustration {
-  background-image: url(/images/home-feature-1.png);
+  background-image: url(/images/home-feature-1.jpg);
 }
 
 .feature.beta .illustration {
-  background-image: url(/images/home-feature-2.png);
+  background-image: url(/images/home-feature-2.jpg);
 }
 
 .feature.gamma .illustration {
