--- a/css/style.css
+++ b/css/style.css
@@ -487,7 +487,7 @@ img {
 }
 
 .feature.gamma .illustration {
-  background-image: url(/images/home-feature-3.png);
+  background-image: url(/images/home-feature-3.jpg);
 }
 
 .feature.delta .illustration {
