--- a/css/style.css
+++ b/css/style.css
@@ -491,7 +491,7 @@ img {
 }
 
 .feature.delta .illustration {
-  background-image: url(/images/home-feature-4.png);
+  background-image: url(/images/home-feature-4.jpg);
 }
 
 .no-svg .feature.alpha .illustration {
